Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
iOS 7
-
-
839c54e070727540570b5994908d461bb7bb4dfd
Description
When auto complete should be displayed application crashes if application font is set. The crash happens only with some fonts.
For example: "Arial Bold" crashes and "Arial" doesn't.
According http://support.apple.com/kb/HT5878 both of them should be installed on iOS 7.
Use the attached example to reproduce.
Seems like regression in Qt 5.3.0 since the same code runs fine on Qt 5.2.
Backtrace:
2014-04-01 14:19:55.362 LineEdit[36355:a0b] *** Terminating app due to uncaught exception 'NSInvalidArgumentException', reason: '*** -[__NSPlaceholderDictionary initWithObjects:forKeys:count:]: attempt to insert nil object from objects[0]' *** First throw call stack: ( 0 CoreFoundation 0x02fe45e4 __exceptionPreprocess + 180 1 libobjc.A.dylib 0x0427b8b6 objc_exception_throw + 44 2 CoreFoundation 0x02faa4c6 -[__NSPlaceholderDictionary initWithObjects:forKeys:count:] + 390 3 CoreFoundation 0x02fb92e6 +[NSDictionary dictionaryWithObject:forKey:] + 86 4 LineEdit 0x0000c4d5 -[QUIView(TextInput) textStylingAtPosition:inDirection:] + 437 5 UIKit 0x01e5586c -[UIResponder(UITextInput_Internal) _fontForCaretSelection] + 192 6 UIKit 0x01d2d451 textFont + 73 7 UIKit 0x01c323ea -[UIAutocorrectInlinePrompt setCandidateObject:candidateSet:type:typedText:inRect:maxX:showHiddenCandidatesOnly:] + 1291 8 UIKit 0x01c31e51 -[UIAutocorrectInlinePrompt setCorrection:typedText:inRect:maxX:] + 104 9 UIKit 0x01c24698 -[UIKeyboardImpl updateAutocorrectPrompt:] + 1327 10 UIKit 0x0f37f7f9 -[UIKeyboardImplAccessibility(SafeCategory) updateAutocorrectPrompt:] + 58 11 UIKit 0x01c23dd5 -[UIKeyboardImpl updateAutocorrectPromptAction] + 143 12 libobjc.A.dylib 0x0428d81f -[NSObject performSelector:withObject:] + 70 13 UIKit 0x01bcf148 -[UIDelayedAction timerFired:] + 83 14 Foundation 0x0296c927 __NSFireTimer + 97 15 CoreFoundation 0x02fa2bd6 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 22 16 CoreFoundation 0x02fa25bd __CFRunLoopDoTimer + 1181 17 CoreFoundation 0x02f8a628 __CFRunLoopRun + 1816 18 CoreFoundation 0x02f89ac3 CFRunLoopRunSpecific + 467 19 CoreFoundation 0x02f898db CFRunLoopRunInMode + 123 20 GraphicsServices 0x042599e2 GSEventRunModal + 192 21 GraphicsServices 0x04259809 GSEventRun + 104 22 UIKit 0x01a3dd3b UIApplicationMain + 1225 23 LineEdit 0x00008255 main + 693 24 LineEdit 0x00004db5 start + 53 ) libc++abi.dylib: terminating with uncaught exception of type NSException (lldb)
Attachments
Issue Links
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-38018 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
83256,1 | iOS: fix crash in auto correction when using unknown font family | release | qt/qtbase | Status: MERGED | +2 | 0 |